// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmazonAds.syncAudiences Normalise and Hash personally-identifiable input provided with SHA-256 1`] = `
Response {
  "content": "{\\"jobRequestId\\":\\"1155d3e3-b18c-4b2b-a3b2-26173cdaf770\\"}",
  "data": Object {
    "jobRequestId": "1155d3e3-b18c-4b2b-a3b2-26173cdaf770",
  },
  "options": Object {
    "afterResponse": Array [
      [Function],
      [Function],
      [Function],
    ],
    "beforeRequest": Array [
      [Function],
    ],
    "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"CREATE\\",\\"hashedPII\\":[{\\"firstname\\":\\"44104fcaef8476724152090d6d7bd9afa8ca5b385f6a99d3c6cf36b943b9872d\\",\\"phone\\":\\"63af7d494c194a90e1cf1db5371c13f97db650161aa803e67182c0dbaf668c7b\\",\\"state\\":\\"92db9c574d420b2437b29d898d55604f61df6c17f5163e53337f2169dd70d38d\\",\\"email\\":\\"15b436489faf367dadf946cfe311d44b6621814e1aacc4f8acfdf0c29a068b11\\"}]}],\\"audienceId\\":379909525712777677}",
    "headers": Headers {
      Symbol(map): Object {
        "amazon-advertising-api-clientid": Array [
          "",
        ],
        "authorization": Array [
          "Bearer undefined",
        ],
        "content-type": Array [
          "application/vnd.amcaudiences.v1+json",
        ],
        "user-agent": Array [
          "Segment (Actions)",
        ],
      },
    },
    "method": "POST",
    "signal": AbortSignal {},
    "statsContext": Object {},
    "throwHttpErrors": true,
    "timeout": 10000,
  },
  "request": Request {
    "agent": undefined,
    "compress": true,
    "counter": 0,
    "follow": 20,
    "size": 0,
    "timeout": 10000,
    Symbol(Body internals): Object {
      "body": Object {
        "data": Array [
          123,
          34,
          114,
          101,
          99,
          111,
          114,
          100,
          115,
          34,
          58,
          91,
          123,
          34,
          101,
          120,
          116,
          101,
          114,
          110,
          97,
          108,
          85,
          115,
          101,
          114,
          73,
          100,
          34,
          58,
          34,
          116,
          101,
          115,
          116,
          45,
          107,
          111,
          99,
          104,
          97,
          114,
          45,
          48,
          49,
          34,
          44,
          34,
          99,
          111,
          117,
          110,
          116,
          114,
          121,
          67,
          111,
          100,
          101,
          34,
          58,
          34,
          85,
          83,
          34,
          44,
          34,
          97,
          99,
          116,
          105,
          111,
          110,
          34,
          58,
          34,
          67,
          82,
          69,
          65,
          84,
          69,
          34,
          44,
          34,
          104,
          97,
          115,
          104,
          101,
          100,
          80,
          73,
          73,
          34,
          58,
          91,
          123,
          34,
          102,
          105,
          114,
          115,
          116,
          110,
          97,
          109,
          101,
          34,
          58,
          34,
          52,
          52,
          49,
          48,
          52,
          102,
          99,
          97,
          101,
          102,
          56,
          52,
          55,
          54,
          55,
          50,
          52,
          49,
          53,
          50,
          48,
          57,
          48,
          100,
          54,
          100,
          55,
          98,
          100,
          57,
          97,
          102,
          97,
          56,
          99,
          97,
          53,
          98,
          51,
          56,
          53,
          102,
          54,
          97,
          57,
          57,
          100,
          51,
          99,
          54,
          99,
          102,
          51,
          54,
          98,
          57,
          52,
          51,
          98,
          57,
          56,
          55,
          50,
          100,
          34,
          44,
          34,
          112,
          104,
          111,
          110,
          101,
          34,
          58,
          34,
          54,
          51,
          97,
          102,
          55,
          100,
          52,
          57,
          52,
          99,
          49,
          57,
          52,
          97,
          57,
          48,
          101,
          49,
          99,
          102,
          49,
          100,
          98,
          53,
          51,
          55,
          49,
          99,
          49,
          51,
          102,
          57,
          55,
          100,
          98,
          54,
          53,
          48,
          49,
          54,
          49,
          97,
          97,
          56,
          48,
          51,
          101,
          54,
          55,
          49,
          56,
          50,
          99,
          48,
          100,
          98,
          97,
          102,
          54,
          54,
          56,
          99,
          55,
          98,
          34,
          44,
          34,
          115,
          116,
          97,
          116,
          101,
          34,
          58,
          34,
          57,
          50,
          100,
          98,
          57,
          99,
          53,
          55,
          52,
          100,
          52,
          50,
          48,
          98,
          50,
          52,
          51,
          55,
          98,
          50,
          57,
          100,
          56,
          57,
          56,
          100,
          53,
          53,
          54,
          48,
          52,
          102,
          54,
          49,
          100,
          102,
          54,
          99,
          49,
          55,
          102,
          53,
          49,
          54,
          51,
          101,
          53,
          51,
          51,
          51,
          55,
          102,
          50,
          49,
          54,
          57,
          100,
          100,
          55,
          48,
          100,
          51,
          56,
          100,
          34,
          44,
          34,
          101,
          109,
          97,
          105,
          108,
          34,
          58,
          34,
          49,
          53,
          98,
          52,
          51,
          54,
          52,
          56,
          57,
          102,
          97,
          102,
          51,
          54,
          55,
          100,
          97,
          100,
          102,
          57,
          52,
          54,
          99,
          102,
          101,
          51,
          49,
          49,
          100,
          52,
          52,
          98,
          54,
          54,
          50,
          49,
          56,
          49,
          52,
          101,
          49,
          97,
          97,
          99,
          99,
          52,
          102,
          56,
          97,
          99,
          102,
          100,
          102,
          48,
          99,
          50,
          57,
          97,
          48,
          54,
          56,
          98,
          49,
          49,
          34,
          125,
          93,
          125,
          93,
          44,
          34,
          97,
          117,
          100,
          105,
          101,
          110,
          99,
          101,
          73,
          100,
          34,
          58,
          51,
          55,
          57,
          57,
          48,
          57,
          53,
          50,
          53,
          55,
          49,
          50,
          55,
          55,
          55,
          54,
          55,
          55,
          125,
        ],
        "type": "Buffer",
      },
      "disturbed": false,
      "error": null,
    },
    Symbol(Request internals): Object {
      "headers": Headers {
        Symbol(map): Object {
          "amazon-advertising-api-clientid": Array [
            "",
          ],
          "authorization": Array [
            "Bearer undefined",
          ],
          "content-type": Array [
            "application/vnd.amcaudiences.v1+json",
          ],
          "user-agent": Array [
            "Segment (Actions)",
          ],
        },
      },
      "method": "POST",
      "parsedURL": Url {
        "auth": null,
        "hash": null,
        "host": "advertising-api.amazon.com",
        "hostname": "advertising-api.amazon.com",
        "href": "https://advertising-api.amazon.com/amc/audiences/records",
        "path": "/amc/audiences/records",
        "pathname": "/amc/audiences/records",
        "port": null,
        "protocol": "https:",
        "query": null,
        "search": null,
        "slashes": true,
      },
      "redirect": "follow",
      "signal": AbortSignal {},
    },
  },
  "size": 0,
  "timeout": 10000,
  Symbol(Body internals): Object {
    "body": PassThrough {
      "_events": Object {
        "data": [Function],
        "end": [Function],
        "error": [Function],
        "prefinish": [Function],
      },
      "_eventsCount": 4,
      "_maxListeners": undefined,
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": true,
        "closed": true,
        "constructed": true,
        "dataEmitted": true,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": true,
        "emitClose": true,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": true,
        "ended": true,
        "errorEmitted": false,
        "errored": null,
        "flowing": true,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": false,
        Symbol(kPaused): false,
      },
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": true,
        "closed": true,
        "constructed": true,
        "corked": 0,
        "decodeStrings": true,
        "defaultEncoding": "utf8",
        "destroyed": true,
        "emitClose": true,
        "ended": true,
        "ending": true,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": true,
        "finished": true,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": true,
        "sync": false,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": true,
      Symbol(kCapture): false,
      Symbol(kCallback): null,
    },
    "disturbed": true,
    "error": null,
  },
  Symbol(Response internals): Object {
    "counter": 0,
    "headers": Object {
      "content-type": "application/json",
    },
    "status": 202,
    "statusText": "Accepted",
    "url": "https://advertising-api.amazon.com/amc/audiences/records",
  },
}
`;

exports[`AmazonAds.syncAudiences Should add user to audience when Event is Audience Entered 1`] = `
Response {
  "content": "{\\"jobRequestId\\":\\"1155d3e3-b18c-4b2b-a3b2-26173cdaf770\\"}",
  "data": Object {
    "jobRequestId": "1155d3e3-b18c-4b2b-a3b2-26173cdaf770",
  },
  "options": Object {
    "afterResponse": Array [
      [Function],
      [Function],
      [Function],
    ],
    "beforeRequest": Array [
      [Function],
    ],
    "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"CREATE\\",\\"hashedPII\\":[{}]}],\\"audienceId\\":379909525712777677}",
    "headers": Headers {
      Symbol(map): Object {
        "amazon-advertising-api-clientid": Array [
          "",
        ],
        "authorization": Array [
          "Bearer undefined",
        ],
        "content-type": Array [
          "application/vnd.amcaudiences.v1+json",
        ],
        "user-agent": Array [
          "Segment (Actions)",
        ],
      },
    },
    "method": "POST",
    "signal": AbortSignal {},
    "statsContext": Object {},
    "throwHttpErrors": true,
    "timeout": 10000,
  },
  "request": Request {
    "agent": undefined,
    "compress": true,
    "counter": 0,
    "follow": 20,
    "size": 0,
    "timeout": 10000,
    Symbol(Body internals): Object {
      "body": Object {
        "data": Array [
          123,
          34,
          114,
          101,
          99,
          111,
          114,
          100,
          115,
          34,
          58,
          91,
          123,
          34,
          101,
          120,
          116,
          101,
          114,
          110,
          97,
          108,
          85,
          115,
          101,
          114,
          73,
          100,
          34,
          58,
          34,
          116,
          101,
          115,
          116,
          45,
          107,
          111,
          99,
          104,
          97,
          114,
          45,
          48,
          49,
          34,
          44,
          34,
          99,
          111,
          117,
          110,
          116,
          114,
          121,
          67,
          111,
          100,
          101,
          34,
          58,
          34,
          85,
          83,
          34,
          44,
          34,
          97,
          99,
          116,
          105,
          111,
          110,
          34,
          58,
          34,
          67,
          82,
          69,
          65,
          84,
          69,
          34,
          44,
          34,
          104,
          97,
          115,
          104,
          101,
          100,
          80,
          73,
          73,
          34,
          58,
          91,
          123,
          125,
          93,
          125,
          93,
          44,
          34,
          97,
          117,
          100,
          105,
          101,
          110,
          99,
          101,
          73,
          100,
          34,
          58,
          51,
          55,
          57,
          57,
          48,
          57,
          53,
          50,
          53,
          55,
          49,
          50,
          55,
          55,
          55,
          54,
          55,
          55,
          125,
        ],
        "type": "Buffer",
      },
      "disturbed": false,
      "error": null,
    },
    Symbol(Request internals): Object {
      "headers": Headers {
        Symbol(map): Object {
          "amazon-advertising-api-clientid": Array [
            "",
          ],
          "authorization": Array [
            "Bearer undefined",
          ],
          "content-type": Array [
            "application/vnd.amcaudiences.v1+json",
          ],
          "user-agent": Array [
            "Segment (Actions)",
          ],
        },
      },
      "method": "POST",
      "parsedURL": Url {
        "auth": null,
        "hash": null,
        "host": "advertising-api.amazon.com",
        "hostname": "advertising-api.amazon.com",
        "href": "https://advertising-api.amazon.com/amc/audiences/records",
        "path": "/amc/audiences/records",
        "pathname": "/amc/audiences/records",
        "port": null,
        "protocol": "https:",
        "query": null,
        "search": null,
        "slashes": true,
      },
      "redirect": "follow",
      "signal": AbortSignal {},
    },
  },
  "size": 0,
  "timeout": 10000,
  Symbol(Body internals): Object {
    "body": PassThrough {
      "_events": Object {
        "data": [Function],
        "end": [Function],
        "error": [Function],
        "prefinish": [Function],
      },
      "_eventsCount": 4,
      "_maxListeners": undefined,
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": true,
        "closed": true,
        "constructed": true,
        "dataEmitted": true,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": true,
        "emitClose": true,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": true,
        "ended": true,
        "errorEmitted": false,
        "errored": null,
        "flowing": true,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": false,
        Symbol(kPaused): false,
      },
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": true,
        "closed": true,
        "constructed": true,
        "corked": 0,
        "decodeStrings": true,
        "defaultEncoding": "utf8",
        "destroyed": true,
        "emitClose": true,
        "ended": true,
        "ending": true,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": true,
        "finished": true,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": true,
        "sync": false,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": true,
      Symbol(kCapture): false,
      Symbol(kCallback): null,
    },
    "disturbed": true,
    "error": null,
  },
  Symbol(Response internals): Object {
    "counter": 0,
    "headers": Object {
      "content-type": "application/json",
    },
    "status": 202,
    "statusText": "Accepted",
    "url": "https://advertising-api.amazon.com/amc/audiences/records",
  },
}
`;

exports[`AmazonAds.syncAudiences Should delete user from audience when Event is Audience Exited 1`] = `
Response {
  "content": "{\\"jobRequestId\\":\\"1155d3e3-b18c-4b2b-a3b2-26173cdaf770\\"}",
  "data": Object {
    "jobRequestId": "1155d3e3-b18c-4b2b-a3b2-26173cdaf770",
  },
  "options": Object {
    "afterResponse": Array [
      [Function],
      [Function],
      [Function],
    ],
    "beforeRequest": Array [
      [Function],
    ],
    "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"DELETE\\",\\"hashedPII\\":[{}]}],\\"audienceId\\":379909525712777677}",
    "headers": Headers {
      Symbol(map): Object {
        "amazon-advertising-api-clientid": Array [
          "",
        ],
        "authorization": Array [
          "Bearer undefined",
        ],
        "content-type": Array [
          "application/vnd.amcaudiences.v1+json",
        ],
        "user-agent": Array [
          "Segment (Actions)",
        ],
      },
    },
    "method": "POST",
    "signal": AbortSignal {},
    "statsContext": Object {},
    "throwHttpErrors": true,
    "timeout": 10000,
  },
  "request": Request {
    "agent": undefined,
    "compress": true,
    "counter": 0,
    "follow": 20,
    "size": 0,
    "timeout": 10000,
    Symbol(Body internals): Object {
      "body": Object {
        "data": Array [
          123,
          34,
          114,
          101,
          99,
          111,
          114,
          100,
          115,
          34,
          58,
          91,
          123,
          34,
          101,
          120,
          116,
          101,
          114,
          110,
          97,
          108,
          85,
          115,
          101,
          114,
          73,
          100,
          34,
          58,
          34,
          116,
          101,
          115,
          116,
          45,
          107,
          111,
          99,
          104,
          97,
          114,
          45,
          48,
          49,
          34,
          44,
          34,
          99,
          111,
          117,
          110,
          116,
          114,
          121,
          67,
          111,
          100,
          101,
          34,
          58,
          34,
          85,
          83,
          34,
          44,
          34,
          97,
          99,
          116,
          105,
          111,
          110,
          34,
          58,
          34,
          68,
          69,
          76,
          69,
          84,
          69,
          34,
          44,
          34,
          104,
          97,
          115,
          104,
          101,
          100,
          80,
          73,
          73,
          34,
          58,
          91,
          123,
          125,
          93,
          125,
          93,
          44,
          34,
          97,
          117,
          100,
          105,
          101,
          110,
          99,
          101,
          73,
          100,
          34,
          58,
          51,
          55,
          57,
          57,
          48,
          57,
          53,
          50,
          53,
          55,
          49,
          50,
          55,
          55,
          55,
          54,
          55,
          55,
          125,
        ],
        "type": "Buffer",
      },
      "disturbed": false,
      "error": null,
    },
    Symbol(Request internals): Object {
      "headers": Headers {
        Symbol(map): Object {
          "amazon-advertising-api-clientid": Array [
            "",
          ],
          "authorization": Array [
            "Bearer undefined",
          ],
          "content-type": Array [
            "application/vnd.amcaudiences.v1+json",
          ],
          "user-agent": Array [
            "Segment (Actions)",
          ],
        },
      },
      "method": "POST",
      "parsedURL": Url {
        "auth": null,
        "hash": null,
        "host": "advertising-api.amazon.com",
        "hostname": "advertising-api.amazon.com",
        "href": "https://advertising-api.amazon.com/amc/audiences/records",
        "path": "/amc/audiences/records",
        "pathname": "/amc/audiences/records",
        "port": null,
        "protocol": "https:",
        "query": null,
        "search": null,
        "slashes": true,
      },
      "redirect": "follow",
      "signal": AbortSignal {},
    },
  },
  "size": 0,
  "timeout": 10000,
  Symbol(Body internals): Object {
    "body": PassThrough {
      "_events": Object {
        "data": [Function],
        "end": [Function],
        "error": [Function],
        "prefinish": [Function],
      },
      "_eventsCount": 4,
      "_maxListeners": undefined,
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": true,
        "closed": true,
        "constructed": true,
        "dataEmitted": true,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": true,
        "emitClose": true,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": true,
        "ended": true,
        "errorEmitted": false,
        "errored": null,
        "flowing": true,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": false,
        Symbol(kPaused): false,
      },
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": true,
        "closed": true,
        "constructed": true,
        "corked": 0,
        "decodeStrings": true,
        "defaultEncoding": "utf8",
        "destroyed": true,
        "emitClose": true,
        "ended": true,
        "ending": true,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": true,
        "finished": true,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": true,
        "sync": false,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": true,
      Symbol(kCapture): false,
      Symbol(kCallback): null,
    },
    "disturbed": true,
    "error": null,
  },
  Symbol(Response internals): Object {
    "counter": 0,
    "headers": Object {
      "content-type": "application/json",
    },
    "status": 202,
    "statusText": "Accepted",
    "url": "https://advertising-api.amazon.com/amc/audiences/records",
  },
}
`;

exports[`AmazonAds.syncAudiences should work with batch events 1`] = `
Response {
  "content": "{\\"jobRequestId\\":\\"1155d3e3-b18c-4b2b-a3b2-26173cdaf770\\"}",
  "data": Object {
    "jobRequestId": "1155d3e3-b18c-4b2b-a3b2-26173cdaf770",
  },
  "options": Object {
    "afterResponse": Array [
      [Function],
      [Function],
      [Function],
    ],
    "beforeRequest": Array [
      [Function],
    ],
    "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"CREATE\\",\\"hashedPII\\":[{\\"firstname\\":\\"44104fcaef8476724152090d6d7bd9afa8ca5b385f6a99d3c6cf36b943b9872d\\",\\"city\\":\\"b4c0372af033c406857a420644e46c806280a0bab8246bd0c62c7807f66f794f\\",\\"state\\":\\"92db9c574d420b2437b29d898d55604f61df6c17f5163e53337f2169dd70d38d\\",\\"email\\":\\"87924606b4131a8aceeeae8868531fbb9712aaa07a5d3a756b26ce0f5d6ca674\\"}]},{\\"externalUserId\\":\\"test-kochar-02\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"DELETE\\",\\"hashedPII\\":[{\\"firstname\\":\\"44104fcaef8476724152090d6d7bd9afa8ca5b385f6a99d3c6cf36b943b9872d\\",\\"lastname\\":\\"4cd1cb0957bc59e698beab9e86f062f2e84138bff5a446e49762da8fe0c2f499\\",\\"address\\":\\"45cfec5f1df1af649d49fc74314d7c9272e2f63ae9119bd3ef4b22a040d98cbc\\",\\"postal\\":\\"9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08\\",\\"state\\":\\"92db9c574d420b2437b29d898d55604f61df6c17f5163e53337f2169dd70d38d\\",\\"email\\":\\"bd0bcf03735a1a00c6f1dd21c63c5d819e7e450298f301698192e8df90da3bb3\\"}]}],\\"audienceId\\":379909525712777677}",
    "headers": Headers {
      Symbol(map): Object {
        "amazon-advertising-api-clientid": Array [
          "",
        ],
        "authorization": Array [
          "Bearer undefined",
        ],
        "content-type": Array [
          "application/vnd.amcaudiences.v1+json",
        ],
        "user-agent": Array [
          "Segment (Actions)",
        ],
      },
    },
    "method": "POST",
    "signal": AbortSignal {},
    "statsContext": Object {},
    "throwHttpErrors": true,
    "timeout": 10000,
  },
  "request": Request {
    "agent": undefined,
    "compress": true,
    "counter": 0,
    "follow": 20,
    "size": 0,
    "timeout": 10000,
    Symbol(Body internals): Object {
      "body": Object {
        "data": Array [
          123,
          34,
          114,
          101,
          99,
          111,
          114,
          100,
          115,
          34,
          58,
          91,
          123,
          34,
          101,
          120,
          116,
          101,
          114,
          110,
          97,
          108,
          85,
          115,
          101,
          114,
          73,
          100,
          34,
          58,
          34,
          116,
          101,
          115,
          116,
          45,
          107,
          111,
          99,
          104,
          97,
          114,
          45,
          48,
          49,
          34,
          44,
          34,
          99,
          111,
          117,
          110,
          116,
          114,
          121,
          67,
          111,
          100,
          101,
          34,
          58,
          34,
          85,
          83,
          34,
          44,
          34,
          97,
          99,
          116,
          105,
          111,
          110,
          34,
          58,
          34,
          67,
          82,
          69,
          65,
          84,
          69,
          34,
          44,
          34,
          104,
          97,
          115,
          104,
          101,
          100,
          80,
          73,
          73,
          34,
          58,
          91,
          123,
          34,
          102,
          105,
          114,
          115,
          116,
          110,
          97,
          109,
          101,
          34,
          58,
          34,
          52,
          52,
          49,
          48,
          52,
          102,
          99,
          97,
          101,
          102,
          56,
          52,
          55,
          54,
          55,
          50,
          52,
          49,
          53,
          50,
          48,
          57,
          48,
          100,
          54,
          100,
          55,
          98,
          100,
          57,
          97,
          102,
          97,
          56,
          99,
          97,
          53,
          98,
          51,
          56,
          53,
          102,
          54,
          97,
          57,
          57,
          100,
          51,
          99,
          54,
          99,
          102,
          51,
          54,
          98,
          57,
          52,
          51,
          98,
          57,
          56,
          55,
          50,
          100,
          34,
          44,
          34,
          99,
          105,
          116,
          121,
          34,
          58,
          34,
          98,
          52,
          99,
          48,
          51,
          55,
          50,
          97,
          102,
          48,
          51,
          51,
          99,
          52,
          48,
          54,
          56,
          53,
          55,
          97,
          52,
          50,
          48,
          54,
          52,
          52,
          101,
          52,
          54,
          99,
          56,
          48,
          54,
          50,
          56,
          48,
          97,
          48,
          98,
          97,
          98,
          56,
          50,
          52,
          54,
          98,
          100,
          48,
          99,
          54,
          50,
          99,
          55,
          56,
          48,
          55,
          102,
          54,
          54,
          102,
          55,
          57,
          52,
          102,
          34,
          44,
          34,
          115,
          116,
          97,
          116,
          101,
          34,
          58,
          34,
          57,
          50,
          100,
          98,
          57,
          99,
          53,
          55,
          52,
          100,
          52,
          50,
          48,
          98,
          50,
          52,
          51,
          55,
          98,
          50,
          57,
          100,
          56,
          57,
          56,
          100,
          53,
          53,
          54,
          48,
          52,
          102,
          54,
          49,
          100,
          102,
          54,
          99,
          49,
          55,
          102,
          53,
          49,
          54,
          51,
          101,
          53,
          51,
          51,
          51,
          55,
          102,
          50,
          49,
          54,
          57,
          100,
          100,
          55,
          48,
          100,
          51,
          56,
          100,
          34,
          44,
          34,
          101,
          109,
          97,
          105,
          108,
          34,
          58,
          34,
          56,
          55,
          57,
          50,
          52,
          54,
          48,
          54,
          98,
          52,
          49,
          51,
          49,
          97,
          56,
          97,
          99,
          101,
          101,
          101,
          97,
          101,
          56,
          56,
          54,
          56,
          53,
          51,
          49,
          102,
          98,
          98,
          57,
          55,
          49,
          50,
          97,
          97,
          97,
          48,
          55,
          97,
          53,
          100,
          51,
          97,
          55,
          53,
          54,
          98,
          50,
          54,
          99,
          101,
          48,
          102,
          53,
          100,
          54,
          99,
          97,
          54,
          55,
          52,
          34,
          125,
          93,
          125,
          44,
          123,
          34,
          101,
          120,
          116,
          101,
          114,
          110,
          97,
          108,
          85,
          115,
          101,
          114,
          73,
          100,
          34,
          58,
          34,
          116,
          101,
          115,
          116,
          45,
          107,
          111,
          99,
          104,
          97,
          114,
          45,
          48,
          50,
          34,
          44,
          34,
          99,
          111,
          117,
          110,
          116,
          114,
          121,
          67,
          111,
          100,
          101,
          34,
          58,
          34,
          85,
          83,
          34,
          44,
          34,
          97,
          99,
          116,
          105,
          111,
          110,
          34,
          58,
          34,
          68,
          69,
          76,
          69,
          84,
          69,
          34,
          44,
          34,
          104,
          97,
          115,
          104,
          101,
          100,
          80,
          73,
          73,
          34,
          58,
          91,
          123,
          34,
          102,
          105,
          114,
          115,
          116,
          110,
          97,
          109,
          101,
          34,
          58,
          34,
          52,
          52,
          49,
          48,
          52,
          102,
          99,
          97,
          101,
          102,
          56,
          52,
          55,
          54,
          55,
          50,
          52,
          49,
          53,
          50,
          48,
          57,
          48,
          100,
          54,
          100,
          55,
          98,
          100,
          57,
          97,
          102,
          97,
          56,
          99,
          97,
          53,
          98,
          51,
          56,
          53,
          102,
          54,
          97,
          57,
          57,
          100,
          51,
          99,
          54,
          99,
          102,
          51,
          54,
          98,
          57,
          52,
          51,
          98,
          57,
          56,
          55,
          50,
          100,
          34,
          44,
          34,
          108,
          97,
          115,
          116,
          110,
          97,
          109,
          101,
          34,
          58,
          34,
          52,
          99,
          100,
          49,
          99,
          98,
          48,
          57,
          53,
          55,
          98,
          99,
          53,
          57,
          101,
          54,
          57,
          56,
          98,
          101,
          97,
          98,
          57,
          101,
          56,
          54,
          102,
          48,
          54,
          50,
          102,
          50,
          101,
          56,
          52,
          49,
          51,
          56,
          98,
          102,
          102,
          53,
          97,
          52,
          52,
          54,
          101,
          52,
          57,
          55,
          54,
          50,
          100,
          97,
          56,
          102,
          101,
          48,
          99,
          50,
          102,
          52,
          57,
          57,
          34,
          44,
          34,
          97,
          100,
          100,
          114,
          101,
          115,
          115,
          34,
          58,
          34,
          52,
          53,
          99,
          102,
          101,
          99,
          53,
          102,
          49,
          100,
          102,
          49,
          97,
          102,
          54,
          52,
          57,
          100,
          52,
          57,
          102,
          99,
          55,
          52,
          51,
          49,
          52,
          100,
          55,
          99,
          57,
          50,
          55,
          50,
          101,
          50,
          102,
          54,
          51,
          97,
          101,
          57,
          49,
          49,
          57,
          98,
          100,
          51,
          101,
          102,
          52,
          98,
          50,
          50,
          97,
          48,
          52,
          48,
          100,
          57,
          56,
          99,
          98,
          99,
          34,
          44,
          34,
          112,
          111,
          115,
          116,
          97,
          108,
          34,
          58,
          34,
          57,
          102,
          56,
          54,
          100,
          48,
          56,
          49,
          56,
          56,
          52,
          99,
          55,
          100,
          54,
          53,
          57,
          97,
          50,
          102,
          101,
          97,
          97,
          48,
          99,
          53,
          53,
          97,
          100,
          48,
          49,
          53,
          97,
          51,
          98,
          102,
          52,
          102,
          49,
          98,
          50,
          98,
          48,
          98,
          56,
          50,
          50,
          99,
          100,
          49,
          53,
          100,
          54,
          99,
          49,
          53,
          98,
          48,
          102,
          48,
          48,
          97,
          48,
          56,
          34,
          44,
          34,
          115,
          116,
          97,
          116,
          101,
          34,
          58,
          34,
          57,
          50,
          100,
          98,
          57,
          99,
          53,
          55,
          52,
          100,
          52,
          50,
          48,
          98,
          50,
          52,
          51,
          55,
          98,
          50,
          57,
          100,
          56,
          57,
          56,
          100,
          53,
          53,
          54,
          48,
          52,
          102,
          54,
          49,
          100,
          102,
          54,
          99,
          49,
          55,
          102,
          53,
          49,
          54,
          51,
          101,
          53,
          51,
          51,
          51,
          55,
          102,
          50,
          49,
          54,
          57,
          100,
          100,
          55,
          48,
          100,
          51,
          56,
          100,
          34,
          44,
          34,
          101,
          109,
          97,
          105,
          108,
          34,
          58,
          34,
          98,
          100,
          48,
          98,
          99,
          102,
          48,
          51,
          55,
          51,
          53,
          97,
          49,
          97,
          48,
          48,
          99,
          54,
          102,
          49,
          100,
          100,
          50,
          49,
          99,
          54,
          51,
          99,
          53,
          100,
          56,
          49,
          57,
          101,
          55,
          101,
          52,
          53,
          48,
          50,
          57,
          56,
          102,
          51,
          48,
          49,
          54,
          57,
          56,
          49,
          57,
          50,
          101,
          56,
          100,
          102,
          57,
          48,
          100,
          97,
          51,
          98,
          98,
          51,
          34,
          125,
          93,
          125,
          93,
          44,
          34,
          97,
          117,
          100,
          105,
          101,
          110,
          99,
          101,
          73,
          100,
          34,
          58,
          51,
          55,
          57,
          57,
          48,
          57,
          53,
          50,
          53,
          55,
          49,
          50,
          55,
          55,
          55,
          54,
          55,
          55,
          125,
        ],
        "type": "Buffer",
      },
      "disturbed": false,
      "error": null,
    },
    Symbol(Request internals): Object {
      "headers": Headers {
        Symbol(map): Object {
          "amazon-advertising-api-clientid": Array [
            "",
          ],
          "authorization": Array [
            "Bearer undefined",
          ],
          "content-type": Array [
            "application/vnd.amcaudiences.v1+json",
          ],
          "user-agent": Array [
            "Segment (Actions)",
          ],
        },
      },
      "method": "POST",
      "parsedURL": Url {
        "auth": null,
        "hash": null,
        "host": "advertising-api.amazon.com",
        "hostname": "advertising-api.amazon.com",
        "href": "https://advertising-api.amazon.com/amc/audiences/records",
        "path": "/amc/audiences/records",
        "pathname": "/amc/audiences/records",
        "port": null,
        "protocol": "https:",
        "query": null,
        "search": null,
        "slashes": true,
      },
      "redirect": "follow",
      "signal": AbortSignal {},
    },
  },
  "size": 0,
  "timeout": 10000,
  Symbol(Body internals): Object {
    "body": PassThrough {
      "_events": Object {
        "data": [Function],
        "end": [Function],
        "error": [Function],
        "prefinish": [Function],
      },
      "_eventsCount": 4,
      "_maxListeners": undefined,
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": true,
        "closed": true,
        "constructed": true,
        "dataEmitted": true,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": true,
        "emitClose": true,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": true,
        "ended": true,
        "errorEmitted": false,
        "errored": null,
        "flowing": true,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": false,
        Symbol(kPaused): false,
      },
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": true,
        "closed": true,
        "constructed": true,
        "corked": 0,
        "decodeStrings": true,
        "defaultEncoding": "utf8",
        "destroyed": true,
        "emitClose": true,
        "ended": true,
        "ending": true,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": true,
        "finished": true,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": true,
        "sync": false,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": true,
      Symbol(kCapture): false,
      Symbol(kCallback): null,
    },
    "disturbed": true,
    "error": null,
  },
  Symbol(Response internals): Object {
    "counter": 0,
    "headers": Object {
      "content-type": "application/json",
    },
    "status": 202,
    "statusText": "Accepted",
    "url": "https://advertising-api.amazon.com/amc/audiences/records",
  },
}
`;
